# UnityPhysXPlugin

./: .gitignore  CMakeLists.txt
NVIDIA.PhysX.Native/: CMakeLists.txt
NVIDIA.PhysX.Native/Helpers/: Helpers.cpp  Helpers.h
NVIDIA.PhysX.Native/Interface/: Native.i
NVIDIA.PhysX.Native/Wrapper/: NativeCSHARP_wrap.cxx
NVIDIA.PhysX/Wrapper/: NativePINVOKE.cs  PxFoundation.cs
Unity/PhysX Plugin/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
